# aiagent-payments

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DECISION.md  CONTRIBUTORS.md  DISCLAIMER.md  FAQ.md  LICENSE  Makefile  README.md  RELEASE_BLOG.md  dev-requirements.txt  example.env  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pr.yml  release-drafter.yml  release.yml  sync-wiki.yml
aiagent_payments/: __init__.py  config.py  core.py  exceptions.py  logging_config.py  models.py  utils.py
aiagent_payments/providers/: __init__.py  base.py  crypto.py  mock.py  paypal.py  stripe.py
aiagent_payments/storage/: __init__.py  base.py  database.py  file.py  memory.py
cli/: main.py
demo_data/: payment_plans.json  subscriptions.json  usage_records.json  user_subscriptions.json
docs/: architecture.md  crypto_provider_guide.md  local_setup.md  usage.md
examples/: README.md
examples/advanced/: README.md  advanced_usage.py
examples/basic/: README.md  basic_usage.py
examples/integrations/: README.md  crewai_monetized_example.py  petnamegenius_story.py
examples/real_world/: usage_based_billing.py  usage_based_billing_fast.py
payments_data/: payment_plans.json  subscriptions.json  user_subscriptions.json
tests/: conftest.py
tests/functional/: test_cli.py
tests/integration/: test_direct.py  test_integration.py  test_provider_sandbox_integration.py  test_storage_integration.py
tests/unit/: test_basic.py  test_comprehensive_coverage.py  test_config_enforcement.py  test_core.py  test_crypto_timeout_reorg.py  test_exceptions.py  test_models.py  test_providers.py  test_storage.py  test_stripe_provider_amount_above_max.py  test_timeout_reorg_fixes.py  test_usage_and_subscription_manager.py  test_usdt_crypto.py  test_utils.py
wiki/: Common-Errors.md  Contributing-Guidelines.md  Contributors.md  Crypto-Payments-Guide.md  Getting-Started.md  Home.md  Installation-Guide.md  Mock-Provider-Guide.md  PayPal-Integration.md  README.md  Stripe-Deep-Dive.md
